# nocky

./: .editorconfig  .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  README.md  RELEASE_0.3.0.md  RELEASE_NOTES.md  ROADMAP.md  SECURITY.md  install.sh  requirements-youtube.txt  uninstall.sh
.devcontainer/: Dockerfile  devcontainer.json
.nocky-exact-footer-fix-1782186479/: browser.rs
.nocky-footer-queue-backup-1782187276/: main.rs
.nocky-home-artists-render-fix-1782186665/: browser.rs
.nocky-natural-inline-lyrics-wrap-1782216964/: lyrics_view.rs
.nocky-repair-i18n-footer2-1782184196/: main.rs
.nocky-stable-home-player-1782216619/: style.css
.nocky-standby-player-slots-1782217030/: main.rs  style.css
.nocky-wave-track-fix-backup-1782184791/: wave_progress.rs
.nocky-wave-transition-backup-1782185066/: wave_progress.rs
assets/: nocky.css.template  style.css
automation/: pr85-tests.patch
data/: io.github.maylton.Nocky.desktop  io.github.maylton.Nocky.metainfo.xml
docs/: CARDS_CONTAINERS_SHAPE_HIERARCHY.md  CARD_ACTIONS_LOADING_AUDIT.md  CI_FAILURE.txt  COMPOSITOR_BLUR.md  CONTEXTUAL_SURFACES.md  CSS_ARCHITECTURE.md  CSS_REFACTOR_PHASE2A.md  CSS_REFACTOR_PHASE2B.md  CSS_REFACTOR_PHASE2C.md  CSS_REFACTOR_PHASE2D.md  CSS_REFACTOR_PHASE2E.md  CSS_REFACTOR_PHASE2F.md  CSS_REFACTOR_PHASE2G.md  CSS_REFACTOR_PHASE2H.md  CSS_REFACTOR_PHASE2I.md  DIALOG_CONFIRMATION_SURFACES.md  FROSTED_GLASS.md  GITHUB_RELEASE.md  HOME_V2_DIRECT_INNERTUBE_TESTING.md  HOME_V2_POLISH_TESTING.md  HOME_V2_RENDER_REUSE_TESTING.md  HOME_V3_STACK.md  HYPRLAND_BLUR.md  (+62 more)
(+396 files in other folders)
